fixed layout of movie page break on phone ui, limit search text size, add message for empty search result

--- a/src/index.css
+++ b/src/index.css
@@ -173,6 +173,7 @@ body {
 
 #movie-paper-container {
   max-width: 720px;
+  width: 100%;
   display: inline-block;
   text-align: left;
   margin: 8px 0px;
@@ -188,9 +189,7 @@ body {
 }
 
 .movie-divider {
-  max-width: 670px;
-  left: 25px;
-  margin: 30px 0px!important;
+  margin: 30px 24px!important;
   position: relative;
 }
 
@@ -210,5 +209,14 @@ body {
 
 .grid-wrapper-2-cols {
   display: grid;
-  grid: auto-flow dense / 310px 310px;
+  /*grid: auto-flow dense / 310px 310px;*/
+  grid-template-columns: repeat(auto-fill, 310px);
+}
+.search-not-found-message {
+  padding: 16px;
+  font-weight: 400;
+}
+
+.search-not-found-message span {
+  color: crimson;
 }
